--- a/about.html
+++ b/about.html
@@ -49,28 +49,32 @@
                 Our museum offers various ways for you to use our resources and contribute 
                 towards them. We have online records, laboratory space, and a working relationship 
                 with a number of universities around the country.</p>
+                <br><br/>
 
             <h3>Admission</h3>
             <p>The entrance is free for all. 
                 There are guided tours of the museum that leave every hour. 
                 These tours are 70 NOK per person and include a handy printed guide of the museum. 
                 If you would like to organise a guided tour for your group of 6 or more 
-                people, please contact us to arrange the tour.
-                </p>
+                people, please contact us to arrange the tour.</p>
+                <br><br/>
 
             <h3>Accessibility</h3>
             <p>The museum has wheelchair accessibility ramps. 
                 It also has audio guides and braille display signs
                 for the visually impaired.</p>
+                <br><br/>
 
             <h3>Food and drink</h3>
             <p>There is a café attached to the museum where you can get light lunches, 
                 soft drinks, coffee, snacks and more.</p>
+                <br><br/>
 
             <h3>Shop</h3>
             <p>Our shop offers a range of memorabilia from the museum as well as great
                gifts and activity packs that allow you to continue to explore science even 
                after you’ve left the museum.</p>
+               <br><br/>
 
             <h1>Get Involved</h1>
             <h2>Support</h2>
@@ -80,8 +84,9 @@
                 You can also support us by donating items of interest to the museum’s collections. 
                 If you have some item or collection that you think others would enjoy, 
                 please let us know by contacting our Collections Department and they 
-                will be able to assist you.
-                </p>
+                will be able to assist you.</p>
+                <br><br/>
+
             <h2>Volunteer</h2>
             <p>A number of people volunteer their time and effort to keep the displays 
                 in good order and ready for visitors to come and enjoy. Volunteering has 
@@ -89,15 +94,16 @@
                 access to staff-only lectures, and a monthly lunch where all staff and volunteers 
                 come together to discuss ideas for future exhibits and strategies for the museum.
                 You can help volunteer in a number of different spheres. Please contact us if you’d 
-                like to find out more about how you can get involved.
-                </p>
+                like to find out more about how you can get involved.</p>
+                <br><br/>
+
              <h2>Internships</h2> 
              <p>Are you interested in working in a museum? Do you enjoy the fun and excitement 
                 of sharing the wonders of nature with people? Well you could be just the right 
                 person to enjoy an internship at the museum.
                 You’ll be learning from a number of different academics and people who are
-                passionate about science and sharing it with the wider community.
-                </p> 
+                passionate about science and sharing it with the wider community.</p> 
+                <br><br/>
 
             </section>
 
