--- a/visit.html
+++ b/visit.html
@@ -59,6 +59,7 @@
                 <br><br/>
             
                 
+                <div class="itemcos">
                 <h3>Evolution</h3>
                 <p>For centuries, philosophers and scientists have wrestled with the question of
                     our origins. Where do we come from and how did we get here? Since Darwin proposed 
