--- a/visit.html
+++ b/visit.html
@@ -44,6 +44,7 @@
                 <img src="images/musum.jpg" alt="sign of the museum">
              </div>
 
+            <div class="itemcos">
             <h1>Visit us</h1>
             <h2>Exhibition Spaces</h2>
             <br><br/>
