--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
             <img src="images/window.jpg" alt="Exhibition of our body skeleton">
         </section>
         
+
+        <section class="container_red">
+
             <h1>Special Events and Exhibitions</h1>
             <h3>Visiting Professor of Aeronautics</h3>
                 <p>It is our pleasure to announce that Prof Sheila Widnall 
@@ -73,6 +76,7 @@
                    that shows how turbines are able to use and control wind to create power.</p>
                 </p>
         </div>
+    </section>
   
    
 
