--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
         
 
         <section class="container_red">
+            <img src="images/red.jpg" alt="red img girl with vr-glasses">
 
             <h1>Special Events and Exhibitions</h1>
             <h3>Visiting Professor of Aeronautics</h3>
