--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         
 
         <section class="container_red">
-            <img src="images/red.jpg" alt="red img girl with vr-glasses">
+            <img src="images/red.jpg" alt="red img girl with vr-glasses" class="float">
 
             <h1>Special Events and Exhibitions</h1>
             <h3>Visiting Professor of Aeronautics</h3>
