--- a/index.html
+++ b/index.html
@@ -135,10 +135,12 @@
             
 
             <div class="item">
+                <div class="textblack">
             <h3>Adress and phone</h3>
             <p>Sunshinestreet 71</p>
             <p>5001 Bergen 00664488</p>
-        </div>
+                </div>
+            </div> 
             
             <div class="item">
             <h3>Do you have question?</h3>
