--- a/index.html
+++ b/index.html
@@ -135,9 +135,10 @@
             
 
             <div class="item">
-            <h3>Adress and phone</h3>
-            <p>Sunshinestreet 71</p>
-            <p>5001 Bergen 00664488</p>
+            <h4>Adress and phone
+            Sunshinestreet 71
+            5001 Bergen 00664488
+        </h4>
             </div> 
             
             <div class="item">
