--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
             </div> 
             
             <div class="item">
-            <h3>Do you have question? <class="text">/h3>
+            <h3>Do you have question? <class="texth3">/h3>
             <p>We are happy to hear from you</p>
             <p>Email us: Communitysciencemuseum@gmail.com</p>
                     
