--- a/about.html
+++ b/about.html
@@ -127,6 +127,9 @@
                     <div class="insta">
                         <i class="fab fa-instagram-square"  alt="twitter icon"></i>
                     </div>
+                    <div class="snap">
+                        <i class="fab fa-snapchat-square"></i>
+                    </div>
                 </div>
             </section>
 
