--- a/school.html
+++ b/school.html
@@ -91,18 +91,17 @@
 
 <section class="container_ant">
 
-
-            <div class="img-school">
                 <div class="item4">
-                    <img src="images/Ant.jpg" alt="big ant in glass">
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aspernatur officia nihil provident architecto, eos magni iste porro totam qui natus quia exercitationem, amet placeat aperiam suscipit libero. Labore, quidem laudantium.</p> 
                 </div>
 
+                <img src="images/Ant.jpg" class="img-school"  alt="big ant in glass">
+
                 <div class="item4">
-                    <img src="images/web.jpg" alt="web">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus, non esse quod minus, ad facilis doloribus consequatur id sint autem quis. Aut explicabo veritatis tempora deleniti delectus? Ipsam, cum recusandae.</p>
                 </div>
-            </div>
+                <img src="images/web.jpg" class="img-school"  alt="web">
+        
 
         </section>
              
