--- a/experience.html
+++ b/experience.html
@@ -65,7 +65,9 @@
     <div class="item_explore">
         <h2>Explore</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam assumenda repudiandae quos sunt impedit reiciendis placeat est obcaecati quae esse. Repellat officia beatae sapiente? Hic quibusdam possimus ea omnis esse!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam assumenda repudiandae quos sunt impedit reiciendis placeat est obcaecati quae esse. Repellat officia beatae sapiente? Hic quibusdam possimus ea omnis esse!</p>
     </div>
+
     
         <img src="images/Painting.jpg" class="img-fun" alt="boy painting with vr-glasses">
  
@@ -73,6 +75,7 @@
   
 
     <div class="item_explore">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam assumenda repudiandae quos sunt impedit reiciendis placeat est obcaecati quae esse. Repellat officia beatae sapiente? Hic quibusdam possimus ea omnis esse!</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio distinctio tempore ullam totam cupiditate illo doloribus est consequuntur dolores vel, repellat incidunt aut veniam ex nemo, praesentium illum? Commodi, ullam.</p>
      </div>
        
@@ -81,6 +84,7 @@
 
 
     <div class="item_explore">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio distinctio tempore ullam totam cupiditate illo doloribus est consequuntur dolores vel, repellat incidunt aut veniam ex nemo, praesentium illum? Commodi, ullam.</p>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum enim odio deleniti voluptatibus voluptatem debitis nemo libero? Quia velit hic ipsum, repellendus, odio, inventore molestias deserunt ipsam quas iste quaerat!</p>
     </div>
         <img src="images/mammut.jpg" class="img-fun" alt="mammut">
