--- a/school.html
+++ b/school.html
@@ -92,6 +92,7 @@
 <section class="container_ant">
 
                 <div class="item4">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus, non esse quod minus, ad facilis doloribus consequatur id sint autem quis. Aut explicabo veritatis tempora deleniti delectus? Ipsam, cum recusandae.</p>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aspernatur officia nihil provident architecto, eos magni iste porro totam qui natus quia exercitationem, amet placeat aperiam suscipit libero. Labore, quidem laudantium.</p> 
                 </div>
 
@@ -99,7 +100,9 @@
 
                 <div class="item4">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus, non esse quod minus, ad facilis doloribus consequatur id sint autem quis. Aut explicabo veritatis tempora deleniti delectus? Ipsam, cum recusandae.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus, non esse quod minus, ad facilis doloribus consequatur id sint autem quis. Aut explicabo veritatis tempora deleniti delectus? Ipsam, cum recusandae.</p>
                 </div>
+
                 <img src="images/web.jpg" class="img-school"  alt="web">
         
 
