--- a/about.html
+++ b/about.html
@@ -45,6 +45,9 @@
              </div>
 
 <br><br/>
+<div class="this">
+
+
             <h1>Researchers</h1>
              <p>Are you looking to get involved with our team of researchers and academics?
                 Our museum offers various ways for you to use our resources and contribute 
@@ -105,6 +108,8 @@
                 You’ll be learning from a number of different academics and people who are
                 passionate about science and sharing it with the wider community.</p> 
                 <br><br/>
+
+            </div>
 
             </section>
 
