--- a/school.html
+++ b/school.html
@@ -89,16 +89,16 @@
        <br><br/>
        </section>
 
-<section class="container_ant">
+<section class="container_explore">
 
-                <div class="item4">
+                <div class="item_explorer">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus, non esse quod minus, ad facilis doloribus consequatur id sint autem quis. Aut explicabo veritatis tempora deleniti delectus? Ipsam, cum recusandae.</p>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aspernatur officia nihil provident architecto, eos magni iste porro totam qui natus quia exercitationem, amet placeat aperiam suscipit libero. Labore, quidem laudantium.</p> 
                 </div>
 
                 <img src="images/Ant.jpg" class="img-school"  alt="big ant in glass">
 
-                <div class="item4">
+                <div class="item_explorer">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus, non esse quod minus, ad facilis doloribus consequatur id sint autem quis. Aut explicabo veritatis tempora deleniti delectus? Ipsam, cum recusandae.</p>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus, non esse quod minus, ad facilis doloribus consequatur id sint autem quis. Aut explicabo veritatis tempora deleniti delectus? Ipsam, cum recusandae.</p>
                 </div>
