--- a/classLevel.html
+++ b/classLevel.html
@@ -52,18 +52,18 @@
             </div>
             </section>     
             
-<section class="container_learning2">
-           <div class="text4">
+<section class="container_explore">
+           <div class="item_explorer">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius officiis, voluptatibus sit delectus totam esse unde velit animi soluta recusandae, ratione natus dolorem officia repellendus. Perferendis ducimus praesentium ad libero?</p>
            </div>
            <img src="images/mammut.jpg" class="img4" alt="mmammoth skeleton">
 
-            <div class="text4">
+            <div class="item_explorer">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum at sapiente culpa et, veniam nostrum rem natus, aspernatur soluta nisi nulla tempore debitis ducimus est possimus? Ab quia deserunt repellat?</p>
             </div>
             <img src="images/sci.jpg" class="img4" alt="cartoon picture of Science">
 
-            <div class="text4">
+            <div class="item_explorer">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius molestias aperiam blanditiis incidunt. Reiciendis recusandae earum suscipit, dolor sequi obcaecati ipsum. Nihil fuga repudiandae dolorum et voluptas esse sit ratione?</p>
             </div>
             <img src="images/red.jpg" class="img4" alt="girl with vr-glasses in red">
