--- a/experience.html
+++ b/experience.html
@@ -67,6 +67,7 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam assumenda repudiandae quos sunt impedit reiciendis placeat est obcaecati quae esse. Repellat officia beatae sapiente? Hic quibusdam possimus ea omnis esse!</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam assumenda repudiandae quos sunt impedit reiciendis placeat est obcaecati quae esse. Repellat officia beatae sapiente? Hic quibusdam possimus ea omnis esse!</p>
     </div>
+</section>
 
     
         <img src="images/Painting.jpg" class="img-fun" alt="boy painting with vr-glasses">
