--- a/experience.html
+++ b/experience.html
@@ -60,7 +60,7 @@
                  <br></br></div>
         </section>
 
-<section class="container_explore">
+<section class="container_explore1">
     
     <div class="item_explorer">
         <h2>Explore</h2>
