--- a/experience.html
+++ b/experience.html
@@ -60,14 +60,13 @@
                  <br></br></div>
         </section>
 
-<section class="container_explore1">
+<section class="container_explore">
     
     <div class="item_explorer">
         <h2>Explore</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam assumenda repudiandae quos sunt impedit reiciendis placeat est obcaecati quae esse. Repellat officia beatae sapiente? Hic quibusdam possimus ea omnis esse!</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam assumenda repudiandae quos sunt impedit reiciendis placeat est obcaecati quae esse. Repellat officia beatae sapiente? Hic quibusdam possimus ea omnis esse!</p>
     </div>
-</section>
 
     
         <img src="images/Painting.jpg" class="img-fun" alt="boy painting with vr-glasses">
@@ -129,6 +128,7 @@
         <div class="insta">
             <i class="fab fa-instagram-square"  alt="twitter icon"></i>
         </div>
+
     </div>
 </section>
   
