--- a/experience.html
+++ b/experience.html
@@ -14,11 +14,13 @@
 
           
                    
-      <a href="index.html">
-        <div class="logo-top">
-            <img src="images/LOGO2.png" alt="Logo of Community Science Museum">
-          </a>
-          </div>
+                <a href="index.html">
+                    <img
+                      src="images/LOGO2.png"
+                      class="logo-top"
+                      alt="Logo of Community Science Museum"
+                    />
+                  </a>
 
 
             <nav>
