--- a/classLevel.html
+++ b/classLevel.html
@@ -14,12 +14,13 @@
             <section class="container">
 
           
-                   
-      <a href="index.html">
-        <div class="logo-top">
-            <img src="images/LOGO2.png" alt="Logo of Community Science Museum">
-          </a>
-          </div>
+                <a href="index.html">
+                    <img
+                      src="images/LOGO2.png"
+                      class="logo-top"
+                      alt="Logo of Community Science Museum"
+                    />
+                  </a>
 
 
             <nav>
