--- a/index.html
+++ b/index.html
@@ -106,17 +106,17 @@
       </section>
 
       <section class="container_opening">
-        <h3>Opening Hours</h3>
-        <p>Monday: Closed</p>
-        <p>Tuesday: 10:00 – 16:00</p>
-        <p>Wednesday: 10:00 – 16:00</p>
-        <p>Thursday: 10:00 – 16:00</p>
-        <p>Friday: 10:00 – 19:00</p>
-        <p>Saturday: 9:00 – 16:00</p>
-        <p>Sunday: 9:00 – 13:00</p>
-      </section>
+        <div class="hours">
+          <h3>Opening Hours</h3>
+          <p>Monday: Closed</p>
+          <p>Tuesday: 10:00 – 16:00</p>
+          <p>Wednesday: 10:00 – 16:00</p>
+          <p>Thursday: 10:00 – 16:00</p>
+          <p>Friday: 10:00 – 19:00</p>
+          <p>Saturday: 9:00 – 16:00</p>
+          <p>Sunday: 9:00 – 13:00</p>
+        </div>
 
-      <section class="container_follow">
         <div class="itemfollow">
           <h2>Follow us</h2>
         </div>
