--- a/about.html
+++ b/about.html
@@ -20,6 +20,10 @@
             class="logo-top"
             alt="Logo of Community Science Museum"
         /></a>
+        <label class="hamburger-label" for="hamburger-menu"
+          ><img src="images/square.png" alt="hamburger menu" class="square"
+        /></label>
+        <input type="checkbox" id="hamburger-menu" />
 
         <nav>
           <ul>
