--- a/experience.html
+++ b/experience.html
@@ -21,6 +21,10 @@
                       alt="Logo of Community Science Museum"
                     />
                   </a>
+                  <label class="hamburger-label" for="hamburger-menu"
+                  ><img src="images/square.png" alt="hamburger menu" class="square"
+                /></label>
+                <input type="checkbox" id="hamburger-menu" />
 
 
             <nav>
