--- a/visit.html
+++ b/visit.html
@@ -23,7 +23,10 @@
                     />
                   </a>
           
-          
+                  <label class="hamburger-label" for="hamburger-menu"
+                  ><img src="images/square.png" alt="hamburger menu" class="square"
+                /></label>
+                <input type="checkbox" id="hamburger-menu" />
                       <nav>
                           <ul>
                               <li><a href="index.html"> Home</a></li>
