--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
     </main>
 
     <footer>
-      <section class="container">
+      <section class="containerend">
         <div class="img-logobottom">
           <img
             src="images/LOGO2.png"
@@ -145,13 +145,13 @@
           />
         </div>
 
-        <div class="item">
+        <div class="itemend">
           <h3>Adress and phone</h3>
           <p>Sunshinestreet 71</p>
           <p>5001 Bergen 00664488</p>
         </div>
 
-        <div class="item">
+        <div class="itemend">
           <h3>Do you have question?</h3>
           <p>We are happy to hear from you</p>
           <p>Email us: Communitysciencemuseum@gmail.com</p>
