--- a/experience.html
+++ b/experience.html
@@ -76,7 +76,7 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
         Quibusdam assumenda repudiandae quos sunt impedit reiciendis placeat est obcaecati quae 
         esse. Repellat officia beatae sapiente? Hic quibusdam possimus ea omnis esse!</p>
-        <img src="images/Painting.jpg" class="img-school" alt="boy painting with vr-glasses">
+        <img src="images/Painting.jpg" class="img-fun" alt="boy painting with vr-glasses">
     </div>
    
     <div class="item_explorer">
@@ -86,7 +86,7 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio distinctio tempore ullam totam 
           cupiditate illo doloribus est consequuntur dolores vel, repellat incidunt aut veniam ex nemo, 
           praesentium illum? Commodi, ullam.</p>
-          <img src="images/scall.jpg" class="img-school" alt="see inside our head">
+          <img src="images/scall.jpg" class="img-fun" alt="see inside our head">
      </div>
     
        
