--- a/classLevel.html
+++ b/classLevel.html
@@ -50,7 +50,6 @@
           alt="girl looking at blackboard"
         />
       </section>
-
       <section class="container_explore">
         <div class="item_explorer">
           <img
@@ -68,9 +67,9 @@
 
         <div class="item_explorer">
           <img
-            src="images/sci.jpg"
+            src="images/heart-2607178_1920.jpg"
             class="img-school"
-            alt="cartoon picture of Science"
+            alt="the heart inside"
           />
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum at
@@ -81,11 +80,7 @@
         </div>
 
         <div class="item_explorer">
-          <img
-            src="images/red.jpg"
-            class="img-school"
-            alt="girl with vr-glasses in red"
-          />
+          <img src="images/sci.jpg" class="img-school" alt="science" />
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius
             molestias aperiam blanditiis incidunt. Reiciendis recusandae earum
