--- a/index.html
+++ b/index.html
@@ -123,13 +123,13 @@
 
         <div class="icons">
           <div class="face">
-            <i class="fab fa-facebook-square" alt="facebook icon"></i>
+            <i class="fab fa-facebook-square"></i>
           </div>
           <div class="twitter">
-            <i class="fab fa-twitter-square" alt="twitter icon"></i>
+            <i class="fab fa-twitter-square"></i>
           </div>
           <div class="insta">
-            <i class="fab fa-instagram-square" alt="twitter icon"></i>
+            <i class="fab fa-instagram-square"></i>
           </div>
         </div>
       </section>
