--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
       src="https://kit.fontawesome.com/0873c1ceec.js"
       crossorigin="anonymous"
     ></script>
-    <title>About us</title>
+    <title>About us | Community science museum</title>
     <meta name="description" content="Get to know us" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="UTF-8" />
