--- a/classLevel.html
+++ b/classLevel.html
@@ -5,7 +5,7 @@
       src="https://kit.fontawesome.com/0873c1ceec.js"
       crossorigin="anonymous"
     ></script>
-    <title>1-4 step</title>
+    <title>1-4 step | Community science museum</title>
     <meta name="description" content="What to do for students 1-4 step" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="UTF-8" />
