--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       src="https://kit.fontawesome.com/0873c1ceec.js"
       crossorigin="anonymous"
     ></script>
-    <title>Community science museum</title>
+    <title>Home | Community science museum</title>
     <meta name="description" content="Welcome to our homepage" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="UTF-8" />
