--- a/experience.html
+++ b/experience.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <script src="https://kit.fontawesome.com/0873c1ceec.js" crossorigin="anonymous"></script>
-        <title>What to experience in the museum</title>
+        <title>What to experience | Community science museum </title>
         <meta name="description" content="Some of the things we have at our museum">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8"/>
